tests/good/rec_compare_0.ppl
data Nat = Zero | Succ Nat;
Succ (Succ (Succ Zero)) == Succ (Succ (Succ Zero));
-- correct: [0.0, 1.0]