tests/bad/infinite_extern.ppl
data nat = Zero | Succ nat;
extern foo: nat;
()
